<resources>
    <string name="app_name">PocketRav</string>

    <!-- Activity Names -->
    <string name="title_activity_main">PocketRav</string>
    <string name="title_activity_authorize">Authorize Your Account</string>

    <!-- Nav Drawer Options -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_notebook">My Notebook</string>
    <string name="navigation_drawer_stash">My Stash</string>
    <string name="navigation_drawer_projects">My Projects</string>
    <string name="navigation_drawer_library">My Library</string>
    <string name="navigation_drawer_queue">My Queue</string>
    <string name="navigation_drawer_tools">My Tools</string>
    <string name="navigation_drawer_handspun">My Handspun</string>
    <string name="navigation_drawer_favorites">My Favorites</string>
    <string name="navigation_drawer_friends">My Friends</string>
    <string name="navigation_drawer_groups_events">My Groups and Events</string>
    <string name="navigation_drawer_messages">My Messages</string>
    <string name="navigation_drawer_contribute">My Contributions</string>
    <string name="navigation_drawer_purchases">My Purchases</string>

    <string name="navigation_drawer_search">Search</string>
    <string name="navigation_drawer_search_yarn">Search Yarns</string>
    <string name="navigation_drawer_search_pattern">Search Patterns</string>
    <string name="navigation_drawer_search_project">Search Projects</string>

    <string name="action_settings">Settings</string>

    <!-- Project -->
    <string name="project_update_not_supported">Ravelry does not support adding or modifying tools of projects that are not crochet or knitting projects via apps at this time. To modify the tools used in this project you will need to log into ravelry via your web browser.</string>
    <string name="project_date_started">Date Started:</string>
    <string name="project_date_completed">Date Completed:</string>
    <string name="project_made_for">Made For:</string>
    <string name="project_status">Status:</string>
    <string name="project_tags">Tags:</string>
    <string name="project_size">Size:</string>
    <string name="project_needles_hooks">Needles/Hooks:</string>
    <string name="project_loom">Loom:</string>
    <string name="project_epi_ppi">EPI/PPI:</string>

    <!-- Stash -->
    <string name="stash_color_family">Color Family:</string>
    <string name="stash_status">Status:</string>
    <string name="stash_handspun">Handspun:</string>
    <string name="stash_location">Location Stored:</string>
    <string name="stash_fiber_company">Fiber Company:</string>
    <string name="stash_colorway">Colorway:</string>
    <string name="stash_tool_sizes">Tool Sizes:</string>
    <string name="stash_weight_name">Yarn Weight:</string>
    <string name="stash_yarn_company">Yarn Company:</string>
    <string name="stash_amount">Amount stashed: </string>
    <string name="stash_remaining">Amount remaining: </string>
    <string name="stash_project">Used in project: </string>
    <string name="stash_project_used">Amount Used in project: </string>


</resources>
